--- a/main.html
+++ b/main.html
@@ -1,16 +1,79 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <title>Testimonial Section</title>
 
+  <style>
+    /* Main Container */
+    .testimonial-container {
+      background-color: #f5f5f5;
+      padding: 40px;
+      font-family: Arial, sans-serif;
+    }
+
+    .testimonial-container h2 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    /* Testimonial Box */
+    .testimonial {
+      background-color: #ffffff;
+      border: 1px solid #ddd;
+      padding: 20px;
+      margin: 15px auto;
+      max-width: 600px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+
+    /* Testimonial Text */
+    .testimonial p {
+      font-size: 16px;
+      line-height: 1.6;
+      margin-bottom: 10px;
+    }
+
+    /* Author */
+    .author {
+      text-align: right;
+      font-style: italic;
+      color: #555;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="testimonial-container">
+    <h2>Testimonials</h2>
+
+    <div class="testimonial">
+      <p>
+        "This platform completely changed the way I learn web development.
+        The courses are simple, practical, and easy to follow."
+      </p>
+      <div class="author">— John Doe</div>
+    </div>
+
+    <div class="testimonial">
+      <p>
+        "Excellent content and great instructors. I was able to build
+        real projects within weeks."
+      </p>
+      <div class="author">— Jane Smith</div>
+    </div>
+
+    <div class="testimonial">
+      <p>
+        "Highly recommended for beginners and professionals alike.
+        The testimonial section design task was fun to implement!"
+      </p>
+      <div class="author">— Alex Johnson</div>
+    </div>
+
+  </div>
 
 </body>
-
 </html>
+
