--- a/main.html
+++ b/main.html
@@ -46,27 +46,22 @@
 <body>
 
   
+<body>
+
+  <div class="testimonial-container">
+
     <h1>Testimonials</h1>
 
     <div class="testimonial">
-      <p>
-        "This platform completely changed the way I learn web development.
-       
-      </p>
-      <div class="author">— John Doe</div>
+      <p>Great course!</p>
+      <p class="author">— John</p>
     </div>
 
     <div class="testimonial">
-      <p>
-        "Excellent content and great instructors. I was able to build
-        real projects within weeks."
-      </p>
-      <div class="author">— Jane Smith</div>
+      <p>Amazing learning.</p>
+      <p class="author">— Smith</p>
     </div>
 
-    
   </div>
 
 </body>
-</html>
-
